--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,6 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Fixer"
         tools:targetApi="31">
+        <activity
+            android:name=".ProfilePhotoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileCustomerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_profile_customer" />
+        <activity
+            android:name=".ListServicesActivity"
+            android:exported="false" />
         <activity
             android:name=".WorkerActivity"
             android:exported="false" />
@@ -36,6 +48,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.fixer.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
+        </provider>
     </application>
 
 </manifest>
